2014-01-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Drop procs: pg-{getline,getlineasync,putline,endcopy}

	* doc/ref.texh (Write/Reading Data): Remove heading
	"Obsolete functions for COPY", blurbs, examples, and @tsin for
	‘pg-getline’, ‘pg-getlineasync’, ‘pg-putline’, ‘pg-endcopy’.

2013-12-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Change bug-report email address.

	* configure.ac (AC_INIT): ...here.

2013-03-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.46 (tag v0.46)

	* configure.ac (AC_INIT): Bump version to "0.46" for release.

2013-03-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.45 (tag v0.45)

	* configure.ac (AC_INIT): Bump version to "0.45" for release.

2013-03-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Synch node layout w/ sectioning.

	This avoids a warning from Texinfo 5.0.

	* doc/ref.texh (Query Construction): Add "Strings" to menu.
	(qcons quoting): Move sections "Standard Conforming Strings"
	and "string external representation"...
	(qcons strings): New node, a section named "Strings".
	(std strings): ...here, as a new node/subsection.
	(string xrep): ...and here, as a new node/subsection.

2013-03-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc slog] Add blank lines around @tsin directives.

	Apparently, makeinfo 5.0 doesn't automagically add blank
	lines around @deftypefun et al, like makeinfo 4.13 used to do.
	<http://lists.gnu.org/archive/html/bug-texinfo/2013-02/msg00129.html>

	* doc/ref.texh: ...here.

2013-03-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Make sure "tests" are run serially.

	* configure.ac (AM_INIT_AUTOMAKE): Add option ‘serial-tests’.

2013-03-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[boot] Bump Automake min vers to 1.12.2.

	* configure.ac (AM_INIT_AUTOMAKE): ...here.

2012-11-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[boot] Use ‘AM_PROG_AR’.

	Suggested by autoreconf.

	* configure.ac (AM_PROG_AR): New.

2012-04-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.44 (tag v0.44)
