@@ -33,6 +33,7 @@ Makefile.in
 /build-aux/ltversion.m4
 /build-aux/lt~obsolete.m4
 /build-aux/missing
+/build-aux/snuggle.m4
 /build-aux/sofix
 /build-aux/sofix.m4
 /build-aux/texinfo.tex
