@@ -1,3 +1,10 @@
+2014-01-09  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[build int] Use Guile-BAUX for snuggle.m4.
+
+	* build-aux/snuggle.m4: Delete file.
+	* autogen.sh: Invoke "guile-baux-tool snuggle".
+
 2014-01-08  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	Drop procs: pg-{getline,getlineasync,putline,endcopy}
